# rust-crypto-wallet

./: .env  .gitignore  Cargo.toml  crypto_wallet.json  wallet.json
src/: eth_wallet.rs  main.rs  utils.rs
