[package]
name = "rust-crypto-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
dotenv = "0.15.0"
hex = { version = "0.4.3", features = ["serde"] }
secp256k1 = { version = "0.20.3", features = ["rand"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tiny-keccak = "1.4"
tokio = { version = "1.43.0", features = ["full"] }
web3 = "0.17.0"
